<resources>
    <string name="app_name">eyulingo</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_register">Register</string>
    <string name="register_email_hint">邮箱</string>
    <string name="register_confirm_hint">六位数字验证码</string>
    <string name="register_username_hint">用户名</string>
    <string name="register_pwd_hint">密码</string>
    <string name="register_pwd_confirm_hint">再次输入密码</string>
    <string name="send_confirm_btn_hint">发送验证码</string>
    <string name="register_success">Register success</string>
    <string name="register_failed">Register failed</string>
    <string name="send_confirm_success_toast">Sending confirm code, wait a few seconds.</string>
    <string name="invalid_register_email">Not a valid email address</string>
    <string name="invalid_register_confirm_code">Not a valid confirm code</string>
    <string name="invalid_register_pwd_confirm">Passwords are different</string>
    <string name="send_confirm_failed_toast">Send confirm code failed, please try again.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="bottom_nav_menu_item_search">搜索</string>
    <string name="bottom_nav_menu_item_store">店铺</string>
    <string name="bottom_nav_menu_item_mine">我的</string>
    <string name="bottom_nav_menu_item_orders">订单</string>
    <string name="bottom_nav_menu_item_cart">购物车</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
