<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_search"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/bottom_nav_menu_item_search"/>

    <item
            android:id="@+id/navigation_store"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/bottom_nav_menu_item_store"/>

    <item
            android:id="@+id/navigation_mine"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/bottom_nav_menu_item_mine"/>
    <item android:title="@string/bottom_nav_menu_item_cart" android:icon="@drawable/ic_home_black_24dp"
          android:id="@+id/navigation_cart"/>
    <item android:title="@string/bottom_nav_menu_item_orders" android:icon="@drawable/ic_home_black_24dp"
          android:id="@+id/navigation_order"/>

</menu>
