<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:id="@+id/register_container">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/register_email"
            android:hint="@string/register_email_hint"
            android:layout_marginTop="64dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
    />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/register_username"
            android:hint="@string/register_username_hint"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginTop="240dp" app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/register_pwd"
            android:hint="@string/register_pwd_hint" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/register_username" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
    />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/register_pwd_confirm"
            android:hint="@string/register_pwd_confirm_hint" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/register_pwd" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
    />
    <EditText
            android:layout_width="137dp"
            android:layout_height="40dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/confirm_num"
            android:hint="@string/register_confirm_hint" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/register_email"
            android:layout_marginStart="64dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="64dp"
            android:layout_marginBottom="40dp" app:layout_constraintBottom_toTopOf="@+id/register_username"
            app:layout_constraintVertical_bias="0.545"
            app:layout_constraintEnd_toStartOf="@+id/send_confirm_button"
            app:layout_constraintHorizontal_bias="0.333" android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/action_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_button"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/register_pwd_confirm"/>
    <Button
            android:text="@string/send_confirm_btn_hint"
            android:layout_width="94dp"
            android:layout_height="45dp"
            android:id="@+id/send_confirm_button" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="64dp"
            android:layout_marginRight="64dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/register_email"
            android:layout_marginBottom="40dp" app:layout_constraintBottom_toTopOf="@+id/register_username"
            app:layout_constraintVertical_bias="0.166"/>
    <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_loading"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="208dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.154" android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp" android:layout_marginEnd="32dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>